# BarkovWA

./: bl.txt  envs.py  main.py  pyproject.toml
.github/workflows/: pyinstaller-build.yml
